# app.warden

./: .gitignore  CONTEXT.md  NEW_CONTEXT.md  README.md  ROADMAP.md  TODO.md  install.sh  justfile
agent/: Warden.slnx
agent/Warden.Admin/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ViewLocator.cs  Warden.Admin.csproj
agent/Warden.Agent.Tests/: AdminSocketTests.cs  BindGuardTests.cs  ChildProcessRegistryTests.cs  DiscoveryApiTests.cs  EnvApiTests.cs  (+11 more)
ator/: Warden.slnx
engine/: pyproject.toml
engine/src/warden/: auth.py  bus.py  cli.py  config.py  discovery.py  engine.py  events.py  file_error_watcher.py  git.py  git_watcher.py  languages.py  logbuffer.py  notifier.py  projects_watcher.py  registry.py  scaffold.py  store.py  system_vitals.py  vitals.py
engine/src/warden/adapters/: base.py  docker_adapter.py  factory.py  just_adapter.py  node_adapter.py  php_adapter.py  process.py  python_adapter.py  raw_adapter.py
engine/src/warden/api/: app.py  deps.py  discovery_routes.py  routes.py  schemas.py  system_routes.py  ws.py
engine/tests/: test_api.py  test_bus.py  test_config.py  test_discovery.py  test_discovery_api.py  test_docker_adapter.py  test_engine.py  test_factory.py  test_file_error_watcher.py  test_git.py  test_git_watcher.py  test_languages.py  test_logbuffer.py  test_notifier.py  test_process_adapter.py  test_registry.py  test_scaffold.py  test_store.py
scripts/: install-service.sh  uninstall-service.sh  warden-admin.desktop.template  warden-agent.service
web/: next.config.ts  package.json  pnpm-lock.yaml
(+199 files in other folders)
