[project]
name = "warden"
version = "0.1.0"
description = "Warden — hub local de supervisão de processos/containers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "psutil>=6",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "httpx>=0.27",
    "websockets>=13",
]

[project.scripts]
warden = "warden.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warden"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.pytest.ini_options]
testpaths = ["tests"]
